<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20sp"
    android:background="#000">

    <TextView
        android:id="@+id/text_view_quiz"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/strMathQuiz"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:background="@drawable/math_quiz_shape"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/edit_text_user_answer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        android:textSize="30sp"
        android:textColor="#000"
        android:background="#FFF"
        android:padding="5sp"
        android:layout_marginBottom="10dp"
        android:focusableInTouchMode="false"
        android:text=""/>

    <TextView
        android:id="@+id/text_view_equation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text=""
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3">

        <Button
            android:id="@+id/button_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/strOne"
            android:background="@drawable/number_buttons_selector"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:shadowColor="#A8A8A8"
            android:shadowDx="3"
            android:shadowDy="2"
            android:shadowRadius="8"/>

        <Button
            android:id="@+id/button_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/strTwo"
            android:background="@drawable/number_buttons_selector"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:shadowColor="#A8A8A8"
            android:shadowDx="3"
            android:shadowDy="2"
            android:shadowRadius="8"/>

        <Button
            android:id="@+id/button_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/strThree"
            android:background="@drawable/number_buttons_selector"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:shadowColor="#A8A8A8"
            android:shadowDx="3"
            android:shadowDy="2"
            android:shadowRadius="8"/>

        <Button
            android:id="@+id/button_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/strFour"
            android:background="@drawable/number_buttons_selector"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:shadowColor="#A8A8A8"
            android:shadowDx="3"
            android:shadowDy="2"
            android:shadowRadius="8"/>

        <Button
            android:id="@+id/button_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/strFive"
            android:background="@drawable/number_buttons_selector"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:shadowColor="#A8A8A8"
            android:shadowDx="3"
            android:shadowDy="2"
            android:shadowRadius="8"/>

        <Button
            android:id="@+id/button_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/strSix"
            android:background="@drawable/number_buttons_selector"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:shadowColor="#A8A8A8"
            android:shadowDx="3"
            android:shadowDy="2"
            android:shadowRadius="8"/>

        <Button
            android:id="@+id/button_seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/strSeven"
            android:background="@drawable/number_buttons_selector"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:shadowColor="#A8A8A8"
            android:shadowDx="3"
            android:shadowDy="2"
            android:shadowRadius="8"/>

        <Button
            android:id="@+id/button_eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/strEight"
            android:background="@drawable/number_buttons_selector"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:shadowColor="#A8A8A8"
            android:shadowDx="3"
            android:shadowDy="2"
            android:shadowRadius="8"/>

        <Button
            android:id="@+id/button_nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/strNine"
            android:background="@drawable/number_buttons_selector"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:shadowColor="#A8A8A8"
            android:shadowDx="3"
            android:shadowDy="2"
            android:shadowRadius="8"/>

        <Button
            android:id="@+id/button_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/strDot"
            android:background="@drawable/number_buttons_selector"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:shadowColor="#A8A8A8"
            android:shadowDx="3"
            android:shadowDy="2"
            android:shadowRadius="8"/>

        <Button
            android:id="@+id/button_zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/strZero"
            android:background="@drawable/number_buttons_selector"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:shadowColor="#A8A8A8"
            android:shadowDx="3"
            android:shadowDy="2"
            android:shadowRadius="8"/>

        <Button
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/strMinus"
            android:background="@drawable/number_buttons_selector"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:shadowColor="#A8A8A8"
            android:shadowDx="3"
            android:shadowDy="2"
            android:shadowRadius="8"/>

        <Button
            android:id="@+id/button_generate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/strGenerate"
            android:background="@drawable/generate_validate_clear_buttons_selector"
            android:textColor="#fff"
            android:textSize="17sp"
            android:layout_margin="5dp"
            android:shadowColor="#A8A8A8"
            android:shadowDx="3"
            android:shadowDy="2"
            android:shadowRadius="8"/>

        <Button
            android:id="@+id/button_validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/strValidate"
            android:background="@drawable/generate_validate_clear_buttons_selector"
            android:textColor="#fff"
            android:textSize="17sp"
            android:layout_margin="5dp"
            android:shadowColor="#A8A8A8"
            android:shadowDx="3"
            android:shadowDy="2"
            android:shadowRadius="8"/>

        <Button
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/strClear"
            android:background="@drawable/generate_validate_clear_buttons_selector"
            android:textColor="#fff"
            android:textSize="17sp"
            android:layout_margin="5dp"
            android:shadowColor="#A8A8A8"
            android:shadowDx="3"
            android:shadowDy="2"
            android:shadowRadius="8"/>
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strScore"
            android:background="@drawable/score_finish_button_selector"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:textColor="#fff"
            android:shadowColor="#A8A8A8"
            android:shadowDx="3"
            android:shadowDy="2"
            android:shadowRadius="8" />

        <Button
            android:id="@+id/button_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strFinish"
            android:layout_weight="1"
            android:background="@drawable/score_finish_button_selector"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:textColor="#fff"
            android:shadowColor="#A8A8A8"
            android:shadowDx="3"
            android:shadowDy="2"
            android:shadowRadius="8"/>

    </LinearLayout>

</LinearLayout>